Nuevos endpoints /api/ordenes y update README y Swagger doc
