# src/routes/apiOrdersRouter.js
@@ -1,6 +1,10 @@
 import { Router } from "express";
 import { isUserCart, isAdminApi } from "../middlewares/auth.js";
-import { validateOrderPost } from "../middlewares/validateApiData.js";
+import {
+  validateId,
+  validateOrderPost,
+  validateOrderStatusPutBody
+} from "../middlewares/validateApiData.js";
 import ApiOrdersController from "../controllers/apiOrdersController.js";
 
 const router = Router();
@@ -11,17 +15,30 @@ class ApiOrdersRouter {
   }
 
   start() {
-    //router.get("/", isAdminApi, getOrders);
-
-    //router.get("/:id", isAdminApi, getOrderById);
+    router.get("/", isAdminApi, this.apiOrdersController.getOrders);
 
     router.get("/usuario", this.apiOrdersController.getUserOrders);
+
+    router.get(
+      "/:id",
+      isAdminApi,
+      validateId,
+      this.apiOrdersController.getOrder
+    );
 
     router.post(
       "/",
       isUserCart,
       validateOrderPost,
       this.apiOrdersController.createOrder
+    );
+
+    router.put(
+      "/:id/estado",
+      isAdminApi,
+      validateId,
+      validateOrderStatusPutBody,
+      this.apiOrdersController.updateOrderStatus
     );
 
     return router;
